--- a/connect4.css
+++ b/connect4.css
@@ -4,6 +4,7 @@
   width: 50px;
   height: 50px;
   border: solid 1px #666;
+  position: relative;
 }
 
 /* pieces are div within game table cells: draw as colored circles */
@@ -13,9 +14,22 @@
   margin: 5px;
   width: 80%;
   height: 80%;
+  position: absolute;
+  animation: drop 1s linear forwards;
 }
 
-/* TODO: make pieces red/blue,  depending on player 1/2 piece */
+@keyframes drop {
+  0% {
+    top: -350px;
+  }
+
+  100% {
+    top: 0px;
+  }
+}
+
+
+/* make pieces red/blue,  depending on player 1/2 piece */
 .p1 {
   background-color: blue;
 }
@@ -23,6 +37,7 @@
 .p2 {
   background-color: rgb(255, 0, 0);
 }
+
 /* column-top is table row of clickable areas for each column */
 
 #column-top td {
